GNOME Bugzilla – Bug 781024
mpegts: fix invalid memory access in language descriptor
Last modified: 2017-05-08 16:14:31 UTC
Created attachment 349442 [details] [review] mpegts: fix invalid memory access in language descriptor
Attachment 349442 [details] pushed as 9eab67a - mpegts: fix invalid memory access in language descriptor